# AlphaPulse

./: .env-example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
alphapulse/: pyproject.toml
docker/: docker-compose.dev.yml
scripts/: download_dataset.py
sql/: 000_extensions.sql  010_market_data_tables.sql  020_ai_embeddings.sql
src/alphapulse/db/: __init__.py  client_psycopg2.py  models.py
